--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
 	"description": "An FCC Backend Challenge",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js",
-		"dev": "nodemon index.js"
+		"start": "node index.js"
 	},
 	"dependencies": {
 		"cors": "^2.8.0",
